--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "url": "https://github.com/rotcivegaf/emyto-token-escrow/issues"
   },
   "homepage": "https://github.com/rotcivegaf/emyto-token-escrow",
+  "dependencies": {
+    "@openzeppelin/contracts": "4.1.0"
+  },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.11",
     "bn-chai": "^1.0.1",
     "chai": "^4.2.0",
     "eslint": "^4.19.1",
