--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   ],
   "scripts": {
     "lint:js": "node_modules/.bin/eslint .",
-    "lint:sol": "node_modules/.bin/solhint \"**/*.sol\"",
+    "lint:sol": "echo 'solidity linter currently disabled' # solhint --max-warnings 0 \"contracts/**/*.sol\"",
     "lint": "npm run lint:js && npm run lint:sol",
-    "test": "node_modules/.bin/truffle test test/TestEmytoERC20Escrow.js test/TestEmytoERC721Escrow.js",
-    "coverage": "node_modules/.bin/truffle run coverage test/TestEmytoERC20Escrow.js test/TestEmytoERC721Escrow.js"
+    "test": "node_modules/.bin/hardhat test test/TestEmytoERC20Escrow.js test/TestEmytoERC721Escrow.js",
+    "coverage": "node_modules/.bin/hardhat coverage",
+    "compile": "node_modules/.bin/hardhat compile"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,9 @@
     "@openzeppelin/contracts": "4.1.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.11",
     "bn-chai": "^1.0.1",
     "chai": "^4.2.0",
@@ -42,8 +46,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "solhint": "^3.2.0",
-    "solidity-coverage": "^0.7.10",
-    "truffle": "^5.0.12"
+    "hardhat": "^2.4.1",
+    "solidity-coverage": "^0.7.10"
   }
 }
