--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "node_modules/.bin/eslint .",
     "lint:sol": "echo 'solidity linter currently disabled' # solhint --max-warnings 0 \"contracts/**/*.sol\"",
     "lint": "npm run lint:js && npm run lint:sol",
-    "test": "node_modules/.bin/hardhat test test/TestEmytoERC20Escrow.js test/TestEmytoERC721Escrow.js",
+    "test": "node_modules/.bin/hardhat test",
     "coverage": "node_modules/.bin/hardhat coverage",
     "compile": "node_modules/.bin/hardhat compile"
   },
